Fix tooltip alignment on maps

--- a/src/_includes/css/fixes.css
+++ b/src/_includes/css/fixes.css
@@ -3,3 +3,7 @@ panelSelector [role=tab] {
         pointer-events: none;
     }
 }
+
+.leaflet-popup {
+    bottom: 24px!important;
+  }
